# Frank

./: .aitomia_paper.txt  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.cursor/: mcp.json
.cursor/skills/frank/: SKILL.md  examples.md  tools-reference.md
examples/: benzene_tddft.py  n2_casscf.py  nh3_mp2.py  water_dft.py  water_hf.py
frank/: __init__.py  agent.py  async_agent.py  async_cli.py  async_executor.py  async_workflows.py  cli.py  config.py  diagnostics.py  executor.py  executor_common.py  interpreter.py  llm.py  molecule_sources.py  molecule_utils.py  molecules.py  workflows.py
frank/aio/: __init__.py  agent.py  executor.py  workflows.py
frank/basis/: __init__.py
frank/cli/: __init__.py  agent_factory.py  async_cli.py  completion.py  main_cli.py  store_cli.py
frank/core/: __init__.py  cost_estimator.py  diagnostics.py  error_diagnosis.py  estimation.py  executor.py  executor_common.py  parser.py  recovery.py  spectrum_reference.py  visualizer.py  workdir.py
frank/core/backends/: base.py  export.py  local.py  queue.py
frank/graph/: __init__.py  agent.py  builder.py  nodes.py  state.py
frank/knowledge/: __init__.py  base.py
frank/mcp/: __init__.py  __main__.py  context.py  serialization.py  server.py
frank/mcp/tools/: __init__.py  execute.py  generate.py  knowledge.py  query.py  workflow.py
frank/methods/: __init__.py  casscf.py  dft.py  excited.py  post_hf.py  relativistic.py  scf.py  solvation.py
frank/molecules/: __init__.py  conformers.py  database.py  sources.py  utils.py  validation.py
frank/orchestrator/: __init__.py  engine.py  planner.py  self_correction.py  stoichiometry.py
frank/queue/: __init__.py  celery_app.py  service.py  tasks.py  worker.py
frank/store/: __init__.py  database.py  models.py  persist.py  repository.py  serialization.py
frank/templates/: __init__.py  base.py  pyscf_templates.py
frank/workflows/: __init__.py  engine.py  export.py
tests/: __init__.py  conftest.py  test_agent.py  test_aitomia_features.py  test_benchmark.py  test_langgraph.py  test_mcp_tools.py  test_molecule_sources.py  test_molecules.py  test_orchestrator.py  test_queue.py  test_store.py  test_templates.py  test_templates_generation.py
