[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frank"
version = "0.1.0"
description = "计算化学终端智能体 — 生成可运行的计算化学代码"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Frank Team"}
]
keywords = ["computational-chemistry", "quantum-chemistry", "agent", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyscf>=2.4.0",
    "rdkit>=2023.3.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
psi4 = ["psi4>=1.8"]
mcp = ["mcp>=1.0"]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
store = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "celery[redis]>=5.3",
    "redis>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mcp>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "sqlalchemy>=2.0",
    "celery[redis]>=5.3",
    "redis>=5.0",
]

[project.scripts]
frank = "frank.cli.main_cli:main"
frank-mcp = "frank.mcp.server:main"
frank-worker = "frank.queue.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["frank"]

[tool.pytest.ini_options]
testpaths = ["tests"]
